--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,45 @@
-# Prerequisites
-*.d
+# Local .terraform directories
+**/.terraform/*
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# .tfstate files
+*.tfstate
+*.tfstate.*
 
-# Precompiled Headers
-*.gch
-*.pch
+# Crash log files
+crash.log
+crash.*.log
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# Exclude all .tfvars files, which are likely to contain sensitive data, such as
+# password, private keys, and other secrets. These should not be part of version 
+# control as they are data points which are potentially sensitive and subject 
+# to change depending on the environment.
+*.tfvars
+*.tfvars.json
 
-# Fortran module files
-*.mod
-*.smod
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# Ignore transient lock info files created by terraform apply
+.terraform.tfstate.lock.info
 
-# Executables
-*.exe
-*.out
-*.app
+# Include override files you do wish to add to version control using negated pattern
+# !example_override.tf
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+# example: *tfplan*
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+src/terraform/main.tfplan
+src/terraform/.terraform.lock.hcl
+
+**/.vs/**
+**/obj/**
+**/bin/**
+**/.DS_Store
+**.vscode/**
